// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slack Block widgets can compose blocks into bigger things 1`] = `
Array [
  Object {
    "accessory": Object {
      "text": Object {
        "emoji": true,
        "text": "Search",
        "type": "plain_text",
      },
      "type": "button",
      "value": "changeSearch",
    },
    "text": Object {
      "text": "Let me help you find some channels.",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "type": "divider",
  },
  Object {
    "text": Object {
      "text": "*Channels*",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "text": Object {
      "text": "*house-ravenclaw*
Discuss Ravenclaw business",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": "120 members
Last post: <!date^1575643433^{date_pretty}|1575643433>",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": ":thumbsup:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-ravenclaw",
      },
      Object {
        "text": Object {
          "emoji": true,
          "text": ":thumbsdown:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-ravenclaw",
      },
    ],
    "type": "actions",
  },
  Object {
    "text": Object {
      "text": "*house-hufflepuff*
Discuss Hufflepuff puffery",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": "107 members
Last post: <!date^1575643433^{date_pretty}|1575643433>",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": ":thumbsup:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-hufflepuff",
      },
      Object {
        "text": Object {
          "emoji": true,
          "text": ":thumbsdown:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-hufflepuff",
      },
    ],
    "type": "actions",
  },
]
`;

exports[`Slack Block widgets creates a formatted date 1`] = `"<!date^1567191506^Posted {date_num}|Posted 2019-09-30>"`;

exports[`Slack Block widgets renders a button 1`] = `
Object {
  "text": Object {
    "emoji": true,
    "text": "Ravenclaw is obviously the best house.",
    "type": "plain_text",
  },
  "type": "button",
  "value": "ravenAgree",
}
`;

exports[`Slack Block widgets renders a divider 1`] = `
Object {
  "type": "divider",
}
`;

exports[`Slack Block widgets renders a markdown section 1`] = `
Object {
  "text": Object {
    "text": "Ravenclaw is obviously the best house.",
    "type": "mrkdwn",
  },
  "type": "section",
}
`;

exports[`Slack Block widgets renders a plaintext block 1`] = `
Object {
  "emoji": true,
  "text": "Ravenclaw is obviously the best house.",
  "type": "plain_text",
}
`;

exports[`Slack Block widgets renders a plaintext block without emoji 1`] = `
Object {
  "emoji": false,
  "text": "Ravenclaw is obviously the best house.",
  "type": "plain_text",
}
`;

exports[`Slack Block widgets renders a section 1`] = `
Object {
  "accessory": Object {
    "text": Object {
      "emoji": true,
      "text": "Ravenclaw is obviously the best house.",
      "type": "plain_text",
    },
    "type": "button",
    "value": "ravenAgree",
  },
  "fields": Array [
    Object {
      "emoji": true,
      "text": "Ravenclaw is obviously the best house.",
      "type": "plain_text",
    },
    Object {
      "text": "Ravenclaw is obviously the best house.",
      "type": "mrkdwn",
    },
  ],
  "text": Object {
    "emoji": true,
    "text": "Ravenclaw is obviously the best house.",
    "type": "plain_text",
  },
  "type": "section",
}
`;

exports[`Slack Block widgets renders an actions 1`] = `
Object {
  "elements": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "Ravenclaw is obviously the best house.",
        "type": "plain_text",
      },
      "type": "button",
      "value": "ravenAgree",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "Ravenclaw is obviously the best house.",
        "type": "plain_text",
      },
      "type": "button",
      "value": "ravenAgree-2",
    },
  ],
  "type": "actions",
}
`;

exports[`Slack Block widgets renders context 1`] = `
Object {
  "elements": Array [
    Object {
      "emoji": true,
      "text": "Ravenclaw is obviously the best house.",
      "type": "plain_text",
    },
  ],
  "type": "context",
}
`;

exports[`Slack Block widgets renders markdown text 1`] = `
Object {
  "text": "Ravenclaw is obviously the best house.",
  "type": "mrkdwn",
}
`;
